@@ -156,16 +156,6 @@ class BaseContext(object):
         self.objects.clear()
         self.class_aliases = {}
 
-    def reset(self):
-        """
-        Resets the context. This is subtly different to the
-        L{BaseContext.clear} method, which is a hard delete of the context.
-        This method is mainly used by the L{remoting api<pyamf.remoting>} to
-        handle context clearing between requests.
-        """
-        self.objects.clear()
-        self.class_aliases = {}
-
     def getObject(self, ref):
         """
         Gets an object based on a reference.
